Bug 410137 - New palette are saved by default into the document: This is confusing behaviour.
Summary: New palette are saved by default into the document: This is confusing behaviour.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.2.3
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
: 410319 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-07-23 13:41 UTC by David REVOY
Modified: 2019-08-01 09:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2019-07-23 13:41:30 UTC
Hi,
I made a new palette using the GUI; then when I closed Krita I lost it. I tried to reproduce and I realised the palette were not saved at all. (nothing in .local/share/krita/palettes/)

To reproduce:
=============
1. Open a document, add the Palette docker
2. Click on the drop down (color icon) to access palettes, then press the "+" on the bottom of this drop-down.
3. A dialog pop-up; name the palette (eg. XYZ), press OK
4. Add color to the palette (in the color selector switch color, and click on empty slot to fill with color slots).
5. Close document, close Krita.
6. Re-open Krita, new document
7. Try to find the created palette.

Result:
=======
The list doesn't contain the new created palette at previous session. (nothing too in .local/share/krita/palettes/). I lost a detailed palette I took 30min to do because I was pretty sure the feature was designed to save the change I was doing to the palette...

Expected:
=========
To find the palette (eg. XYZ) in the list with latest modifications.
Comment 1 wolthera 2019-07-23 14:16:46 UTC
Hi, I think new palettes are saved by default into the document, which IS very confusing default behaviour. Let's change it :)
Comment 2 David REVOY 2019-07-23 16:37:49 UTC
Oh ok :) Good to know for the palette being saved inside the document. True; not intuitive default.

I found a workaround: I create a placeholder mypalette.gpl file ( a *.gpl file almost empty) in .local/share/krita/palettes/ , then I can edit it and all changes are done into a mypalette.kpl file next to it. (btw, the Drag&Drop of color-squares is a really cool new feature.)
Comment 3 vanyossi 2019-08-01 02:10:19 UTC
*** Bug 410319 has been marked as a duplicate of this bug. ***
Comment 4 Halla Rempt 2019-08-01 09:26:49 UTC
Git commit e1de013573f3d4b85d16b81eab2e561e058d3360 by Boudewijn Rempt.
Committed on 01/08/2019 at 09:26.
Pushed by rempt into branch 'master'.

Allow the user to choose between saving and importing palettes locally or into the document

M  +34   -13   libs/ui/KisPaletteEditor.cpp
M  +1    -1    libs/ui/KisPaletteEditor.h

https://invent.kde.org/kde/krita/commit/e1de013573f3d4b85d16b81eab2e561e058d3360
Comment 5 Halla Rempt 2019-08-01 09:27:50 UTC
Git commit 5c6b47cf6882ef384078ca733a105ebb27ff25ac by Boudewijn Rempt.
Committed on 01/08/2019 at 09:27.
Pushed by rempt into branch 'krita/4.2'.

Allow the user to choose between saving and importing palettes locally or into the document

M  +34   -13   libs/ui/KisPaletteEditor.cpp
M  +1    -1    libs/ui/KisPaletteEditor.h

https://invent.kde.org/kde/krita/commit/5c6b47cf6882ef384078ca733a105ebb27ff25ac