Allow the user to choose between saving and importing palettes locally or into the document

BUG:410137